# testwork-geometry

./: README.md  pyproject.toml  testwork2.py
geometry/: __init__.py  circle.py  shape.py  triangle.py
tests/: test_shapes.py
