[project]
name = "geometry"
version = "0.1.0"
description = ""
authors = [
    {name = "Женя Князев",email = "nosatiy@icloud.com"}
]
packages = [{ include = "geometry" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
